--- a/src/components/TimerView.css
+++ b/src/components/TimerView.css
@@ -1,25 +1,25 @@
 .TimerView {
-	width: 320px;
+	width: 380px;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
-	align-items: baseline;
+    justify-content: center;
+	align-items: center;
 }
 
 .TimerView > h1 {
 	flex:1;
-	margin: 1rem;
-	text-align: left;
 	font-variant-numeric: tabular-nums;
 }
 
 .TimerView > h2 {
 	flex: 1;
+    text-align: center;
 }
 
-.TimerView > button {
+.button {
 	padding: 0.25rem 0.5rem;
 	border-radius: 0.5rem;
+    margin: 0.25rem;
 	border: 1px solid #000;
 	background-color: #000;
 	color: #fff;
